# prompt

./: .gitattributes  .gitignore  README.md
TowerOfHanoi/: CMakelists.txt  Dockerfile  Doxyfile  README.md  TowerOfHanoi.dox
TowerOfHanoi/src/: CMakeLists.txt
TowerOfHanoi/src/cli/: main.cpp
TowerOfHanoi/src/lib/: hanoi.cpp  hanoi.h
TowerOfHanoi/test/: CMakeLists.txt  test.cpp
WordFreq/: CMakelists.txt  Dockerfile  Doxyfile  README.md  WordFreq.dox
WordFreq/src/: CMakeLists.txt
WordFreq/src/cli/: main.cpp
WordFreq/src/lib/: parser.cpp  parser.h
WordFreq/test/: CMakeLists.txt  test.cpp
WordFreq/test/files/: beastie.txt  churchill.txt  iverson.txt
docs/: index.html
docs/TowerOfHanoi/: _tower_of_hanoi_8dox.html  annotated.html  class_hanoi-members.html  class_hanoi.html  class_hanoi__coll__graph.map  class_hanoi__coll__graph.md5  class_rod-members.html  class_rod.html  class_rod__coll__graph.map  class_rod__coll__graph.md5  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_c85d3e3c5052e9ad9ce18c6863244a25.html  files.html  functions.html  functions_func.html  functions_rela.html  graph_legend.html  hanoi_8cpp.html  hanoi_8cpp__incl.map  hanoi_8cpp__incl.md5  hanoi_8h.html  hanoi_8h__dep__incl.map  hanoi_8h__dep__incl.md5  hanoi_8h__incl.map  hanoi_8h__incl.md5  hanoi_8h_source.html  index.html
docs/TowerOfHanoi/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  classes_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  related_0.js  searchdata.js
docs/WordFreq/: _word_freq_8dox.html  annotated.html  class_parser-members.html  class_parser.html  class_parser__coll__graph.map  class_parser__coll__graph.md5  class_string_helper-members.html  class_string_helper.html  class_string_helper__coll__graph.map  class_string_helper__coll__graph.md5  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_c85d3e3c5052e9ad9ce18c6863244a25.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  parser_8cpp.html  parser_8cpp__incl.map  parser_8cpp__incl.md5  parser_8h.html  parser_8h__dep__incl.map  parser_8h__dep__incl.md5  parser_8h__incl.map  parser_8h__incl.md5  parser_8h_source.html  struct_parser_collection-members.html  struct_parser_collection.html  struct_parser_collection__coll__graph.map  struct_parser_collection__coll__graph.md5
docs/WordFreq/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  classes_1.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  related_0.js  searchdata.js  variables_0.js  variables_1.js
scripts/: clang-format.sh
